--- a/join_aaup.html
+++ b/join_aaup.html
@@ -61,12 +61,13 @@ $(document).ready(function(){
 			</div>
 			<div style = "height: 100px;"><img src="assets/Images/aaup-logo-2_0.png" style=" height: 80px; border-style: solid; border-width: 5px; background-color: white; border-radius: 25px;"></div>
 				<ul class="nav navbar-nav" style = "display:inline;">
-					<li class= "active"><a class="btn btn-lg btn-link" href="#" style="margin-right: 50px; background-color: #D2492A;"><b>Home</b></a></li>
+<!-- HOME -->				
+					<li class= "active"><a class="btn btn-lg btn-link" href="index.html" style="margin-right: 50px; background-color: #425262;"><b>Home</b></a></li>
 <!-- NEWS AND EVENTS -->
 					<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
 						<ul class="dropdown-menu" style="margin-left: 15px;">
-							<li><a tabindex="-1" href="news.html">News</a></li>
-							<li><a tabindex="-1" href="#">Events</a></li>
+							<li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news">News</a></li>
+							<li><a tabindex="-1" href="events.html">Events</a></li>
 						</ul>
 					</li>
 <!-- INFORMATION -->
@@ -124,16 +125,16 @@ $(document).ready(function(){
 <!-- WHO WE ARE -->
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="faculty.html">Faculty</a></li>
+						<li><a tabindex="-1" href="leaders.html">AAUP CSM Team</a></li>
 						<li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
 					</ul>
 				</li>
 
 <!-- MEMBERSHIP -->		
-				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262;"><b>Membership</b></a>
+				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style =" background-color: #D2492A;"><b>Membership</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Why Join Us?</a></li>
-						<li><a tabindex="-1" href="join_aaup.html">Join AAUP</a></li>
+						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
+						<li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
 					</ul>
 				</li>
 
@@ -150,7 +151,7 @@ $(document).ready(function(){
             <div class="col-lg-12" >
 				<div class = "testGradient">
 					<h1 class="page-header" style = "padding-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
-						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>AAUP</i></b></span>
+						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>CSM AAUP</i></b></span>
 						<small>Why join us?</small>
 					</h1>
 				</div>
@@ -162,7 +163,7 @@ $(document).ready(function(){
         <!-- Project One -->
 		 
 		<div class="row">
-            <div class="col-md-7">
+            <div class="col-md-12">
 			<div style = "margin-left: 50px; ">
 				<div class = "headerGradient"style = "padding: 50px; border-radius: 25px; color:black;" > 
                 <p style="font-size: 15px;"> 
@@ -213,17 +214,6 @@ $(document).ready(function(){
             </div>
 			</div>
 			</div>
-			<div class="col-md-5">
-
-                    <img src="assets/Images/join_aaup.jpg" alt="" style = "height: 300px;">
-					
-					<div style = "height: 100px; width 200px; margin-top: 100px; border-radius: 25px; margin-right:30px;">
-					<p style = "font-size: 30px;  text-align: center; font-family: 'Racing Sans One', cursive;"> Be the change you want to see in the world... </p>
-					<p style = "font-size: 20px; text-align: left; padding-left:30px; font-family: 'Racing Sans One', cursive;">-Mahatma Ghandhi</p>
-					
-					</div>
-
-            </div>
         </div>
 		
 
