--- a/index.html
+++ b/index.html
@@ -75,12 +75,13 @@
 			</div>
 			<div style = "height: 100px;"><img src="assets/Images/aaup-logo-2_0.png" style=" height: 80px; border-style: solid; border-width: 5px; background-color: white; border-radius: 25px;"></div>
 				<ul class="nav navbar-nav" style = "display:inline;">
-					<li class= "active"><a class="btn btn-lg btn-link" href="#" style="margin-right: 50px; background-color: #D2492A;"><b>Home</b></a></li>
+<!-- HOME -->				
+					<li class= "active"><a class="btn btn-lg btn-link" href="index.html" style="margin-right: 50px; background-color: #D2492A;"><b>Home</b></a></li>
 <!-- NEWS AND EVENTS -->
 					<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>News + Events</b></a>
 						<ul class="dropdown-menu" style="margin-left: 15px;">
-							<li><a tabindex="-1" href="news.html">News</a></li>
-							<li><a tabindex="-1" href="#">Events</a></li>
+							<li><a tabindex="-1" href="https://www.aaup.org/news/aaup-news">News</a></li>
+							<li><a tabindex="-1" href="events.html">Events</a></li>
 						</ul>
 					</li>
 <!-- INFORMATION -->
@@ -138,7 +139,7 @@
 <!-- WHO WE ARE -->
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="faculty.html">Faculty</a></li>
+						<li><a tabindex="-1" href="leaders.html">AAUP CSM Team</a></li>
 						<li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
 					</ul>
 				</li>
@@ -146,8 +147,8 @@
 <!-- MEMBERSHIP -->		
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262;"><b>Membership</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Why Join Us?</a></li>
-						<li><a tabindex="-1" href="join_aaup.html">Join AAUP</a></li>
+						<li><a tabindex="-1" href="https://www.aaup.org/membership/join">Join AAUP</a></li>
+						<li><a tabindex="-1" href="join_aaup.html">Why Join Us?</a></li>
 					</ul>
 				</li>
 
