minor fixes as requested from client from 7/16

--- a/index.html
+++ b/index.html
@@ -88,16 +88,6 @@
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
 						<li class="dropdown-submenu">
-							<a class="test" tabindex="-1" href="#">Laws<span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<div class="dropdown-divider"></div>
-								<a style= "padding-left: 50px;"><b>External Links</b></a>
-								<div class="dropdown-divider"></div>
-								<li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
-								<li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
-							</ul>
-						</li>
-						<li class="dropdown-submenu">
 							<a class="test" tabindex="-1" href="#">Constitution<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<div class="dropdown-divider"></div>
@@ -113,9 +103,22 @@
 									<div class="dropdown-divider"></div>
 									<a style= "padding-left: 50px;"><b>External Links</b></a>
 									<div class="dropdown-divider"></div>
+									<li  class="disabled" ><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">CSM Bylaws (Coming Soon)</a></li>
 									<li><a tabindex="-1" href="https://www.aaup.org/get-involved/start-chapter/sample-bylaws">Sample Bylaws</a></li>
 									<li><a tabindex="-1" href="https://www.aaup.org/about/organization/aaup-constitution">AAUP National Constitution</a></li>
 								</ul>
+						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">Documents<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://aaupcolorado.org/law/">law on Non-Tenure Track Teaching Contracts</a></li>
+								<li><a tabindex="-1" href="https://www.nlrb.gov/resources/national-labor-relations-act">National Labor Relations Act</a></li>
+								<li><a tabindex="-1" href="https://www.aaup.org/issues-higher-education">AAUP Issues in Higher Education</a></li>
+								<li><a tabindex="-1" href="https://www.aaup.org/our-programs">AAUP Programs</a></li>
+							</ul>
 						</li>
 						<li class="dropdown-submenu">
 							<a class="test" tabindex="-1" href="#">AAUP Affiliates<span class="caret"></span></a>
@@ -139,7 +142,7 @@
 <!-- WHO WE ARE -->
 				<li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style ="background-color: #425262; margin-right: 50px;"><b>Who We Are</b></a>
 					<ul class="dropdown-menu" style="margin-left: 15px;">
-						<li><a tabindex="-1" href="leaders.html">AAUP CSM Team</a></li>
+						<li><a tabindex="-1" href="leaders.html">CSM AAUP Leadership</a></li>
 						<li><a tabindex="-1" href="our_purpose.html">Our Purpose</a></li>
 					</ul>
 				</li>
@@ -327,7 +330,7 @@ $(document).ready(function(){
 			<div class="col-xs-7">
 				<img src="assets/Images/aaup_nav.png" style = "width:195.5px; height: 68px; float: left;"/>
 				<p style= "float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-				Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br>  <span style = "color: red; ">aaup@aaup.org</span> 
+				C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br>  <span style = "color: red; ">aaupcsm@gmail.com</span> 
 				</p>
 			</div>
 
