--- a/join_aaup.html
+++ b/join_aaup.html
@@ -166,18 +166,11 @@ $(document).ready(function(){
             <div class="col-md-12">
 			<div style = "margin-left: 50px; ">
 				<div class = "headerGradient"style = "padding: 50px; border-radius: 25px; color:black;" > 
-                <p style="font-size: 15px;"> 
-					Membership of AAUP is managed through the national organization. Learn more about the benefits of being a member here: https://www.aaup.org/membership which include:
-				</p>
-				<ul  style=" font-size: 15px;">
-					<li style=" font-size: 15px;">Standing up for Academic Freedom</li>
-					<li style=" font-size: 15px;">Securing faculty participation in Shared Governance</li>
-					<li style=" font-size: 15px;">Protecting the rights of contingent (adjunct) faculty, post-doctoral fellows, and graduate students</li>
-					<li style=" font-size: 15px;">Receive Academe (<a style="font-size: 15px; color:blue;" href="https://www.aaup.org/academe">Click Here</a>)</li>
-					<li style=" font-size: 15px;">Get health insurance</li>
-				</ul>
-				<p  style=" font-size: 15px;">
-				<br><br><br><br>
+               <p style="text-indent: 50px; font-size: 15px;"> The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional values and standards for higher education; to promote the economic security of faculty, academic professionals, graduate students, post‐doctoral fellows, and all those engaged in teaching and research in higher education; to help the higher education community organize to make our goals a reality; and to ensure higher education's contribution to the common good.</p>
+			<p style=" font-size: 15px;">Read more about AAUP <a href = "https://www.aaup.org/about-aaup"><u>Here</u></a> </p>
+			<p style=" font-size: 15px;">Read more about AAUP Programs <a href = "https://www.aaup.org/our-programs"><u>Here</u></a> </p>
+				<br>
+				<p  style=" text-indent: 50px; font-size: 15px;">
 					As an AAUP Member you are automatically a member of the Colorado AAUP Conference(https://aaupcolorado.org/ ) and the CSM Chapter (need link eventually). If you decide to join, please let us know by sending us a message aaup@mines.edu, so that we may welcome you to CSM’s Chapter. (All AAUP membership lists are confidential.) If you decide not to join, please know that you are always welcome to attend meetings, and that you may ask for assistance and advice through our help line.
 				<br><br><br><br>
 				</p>
