--- a/leaders.html
+++ b/leaders.html
@@ -106,6 +106,21 @@
 								<li><a tabindex="-1" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a></li>
 							</ul>
 						</li>
+						<li class="dropdown-submenu">
+							<a class="test" tabindex="-1" href="#">AAUP Affiliates<span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<div class="dropdown-divider"></div>
+								<a style= "padding-left: 50px;"><b>External Links</b></a>
+								<div class="dropdown-divider"></div>
+								<li><a tabindex="-1" href="https://www.aaup.org/">AAUP - National</a></li>
+								<li><a tabindex="-1" href="https://www.aaup.org/reports-publications/journal-academic-freedom">AAUP Journal of Academic Freedom</a></li>
+								<li><a tabindex="-1" href="http://portfolio.du.edu/aaup">University Of Denver Chapter</a></li>
+								<li><a tabindex="-1" href="https://aaupcsu.org/">Colorado State University - Fort Collins Chapter</a></li>
+								<li><a tabindex="-1" href="https://sites.google.com/site/coloradoadjunctswiki/">Colorado Community College Chapter</a></li>
+								<li><a tabindex="-1" href="http://aaup-msudenver.org/">Metropolitan State University Chapter</a></li>
+								<li><a tabindex="-1" href="http://www.cu-aaup.org/">University of Colorado- Boulder Chapter</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 
@@ -145,7 +160,7 @@
 							<div class = "testGradient">
 					<h1 class="page-header" style = "margin-left: 50px; font-size: 40px; font-family: 'Play', sans-serif;">
 						<span style = "font-size: 70px; font-weight: 900; color: #830303;"><b><i>CSM AAUP</i></b></span>
-						<small>Team</small>
+						<small>Leadership</small>
 					</h1>
 				</div>
             </div>
@@ -155,12 +170,12 @@
         <!-- Project One -->
 		<div class = "headerGradient"style = "padding: 50px; color:black;" >  
 		         <div class="row" >
-            <div class="col-md-7">
+            <div class="col-md-4">
                 <a href="#">
                     <img class="img-responsive" src="assets/Facultyimages/wendy.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-8">
                 <h2><b>Wendy Harris</b></h2>
                 <h4><b>Chapter President</b> </h4>
                 <p> Professor Geochemistry <br>
@@ -183,12 +198,12 @@
 
         <!-- Project Two -->
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-4">
                 <a href="#">
                     <img class="img-responsive" src="assets/Facultyimages/marcelo.png" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-8">
                 <h2><b>Marcelo Godoy Simões</b></h2>
                 <h4><b>Chapter Vice President</b><br></h4>
                 <p>	Professor of Electrical Engineering<br>
@@ -205,29 +220,29 @@
         <!-- Project Three -->
         <div class="row">
 
-            <div class="col-md-7">
+            <div class="col-md-4">
                 <a href="#">
-                    <img class="img-responsive" src="assets/Facultyimages/LNickum_RMNP.png" alt="" style = "padding-left: 50px; height: 250px;">
+                    <img class="img-responsive" src="assets/Facultyimages/Lisa_N_LibGuide.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-8">
                 <h2><b>Lisa Nickum</b></h2>
                 <h4><b>Library Faculty Representative</b></h4>
                 <p>Associate Librarian<br>
 					Phone: 303-273-3695 <br>
 					Email: lnickum@mines.edu</p></p>
-                <a class="btn btn-primary" href="https://webapps.mines.edu/DirSearch/Home/detail/Nickum%2cLisa%2cS.%2c">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="http://libguides.mines.edu/prf.php?account_id=113539">Personal Website <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
 		<hr>
         <!-- Project Four -->
 		<div class="row">
-            <div class="col-md-7">
+            <div class="col-md-4">
                 <a href="#">
                     <img class="img-responsive" src="assets/Facultyimages/uweGreife.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-8">
                 <h2><b>Uwe Greife</b></h2>
                 <h4>
 					<b>Chapter Secretary and Treasurer</b><br></h4>
@@ -245,12 +260,12 @@
         <!-- Project Four -->
         <div class="row">
 
-            <div class="col-md-7">
+            <div class="col-md-4">
                 <a href="#">
                     <img class="img-responsive" src="assets/Facultyimages/chuck.jpg" alt="" style = "padding-left: 50px; height: 250px;">
                 </a>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-8">
                 <h2><b>Charles (Chuck) Stone</b></h2>
                 <h4><b>Teaching Professors’ Representative</b></h4>
                 <p>Teaching Professor<br>
