--- a/our_purpose.html
+++ b/our_purpose.html
@@ -167,19 +167,9 @@ $(document).ready(function(){
 			<div style = "margin-left: 50px; ">
 				<div class = "headerGradient"style = "padding: 50px; padding-left: 50px; border-radius: 25px; color:black;" > 
                 <h2> AAUP Serves All Faculty </h2>
-				<p style="font-size: 15px;"> 
-					The University of Delaware chapter of the American Association of University Professors, AAUP, exists to help our members on a number of levels:
-				</p>
-				<ul  style=" font-size: 15px;">
-					<li style=" font-size: 15px;">The achievement of economic security.</li>
-					<li style=" font-size: 15px;">A guarantee for freedom of expression.</li>
-					<li style=" font-size: 15px;">The right to work in an environment free of discrimination.</li>
-					<li style=" font-size: 15px;">The assurance of flexible benefits and a grievance procedure.</li>
-					<li style=" font-size: 15px;">Get health insurance</li>
-				</ul>
-				<p  style=" font-size: 15px;">
-				<br><br><br><br>
-					We also have an array of unique concerns that are related to education and research. It is the AAUP&#39;s task not only to protect the faculty&#39;s economic and workplace rights, but also to guarantee academic freedom and to conceptualize, and make the Administration aware of, specific ways in which the University can deepen its commitment to educational excellence. Without AAUP, there would be no campus organization devoted exclusively to faculty rights, economic concerns and educational excellence. Consequently, no faculty member gains by not supporting the AAUP&#39;s agenda. All faculty benefit from the AAUP&#39;s existence.
+				<br><br>
+				<p style="font-size: 15px;  text-indent: 50px;"> 
+					CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference (https://aaupcolorado.org/). We encourage you to learn more about AAUP and become a member. Regardless of formal membership, however, you are welcome to participate in our Chapter activities. We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research and you can reach us by direct contact with any of the Chapter officers, or privately through our “Need Help” service.
 				<br><br><br><br>
 				</p>
 				</div>
