mionor tweeks to footer, fixed nav bar to now save when closed bby enabling hovering

--- a/events.html
+++ b/events.html
@@ -62,11 +62,11 @@
               <li><a tabindex="-1" href="events.html">Events</a></li>
             </ul>
           </li>
-          <!-- INFORMATION -->
+<!-- INFORMATION -->
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Constitution<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">Constitution</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -76,7 +76,7 @@
                 </ul>
               </li>
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Bylaws<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">Bylaws</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -87,7 +87,7 @@
                 </ul>
               </li>
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Documents<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">Documents</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -99,7 +99,7 @@
                 </ul>
               </li>
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">AAUP Affiliates<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">AAUP Affiliates</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -153,29 +153,29 @@
 
   <!-- FOOTER -->
   <div role="footer" style="background-color: #2b3642; height: 20px; width: 100%; min-width: 1000px;"></div>
-  <div class="panel-footer" style="background-color:#425262; border: none;">
-    <div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
-      <div class="col-xs-7">
-        <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
-        <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
-          C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaupcsm@gmail.com</span>
-        </p>
-      </div>
-      <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
-        <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/">Visit AAUP</a>
-        <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/">Visit AAUP of Colorado</a>
-        <div style="color: #6b7b8b; margin-right: 10px; width: 300px; float: right;">
-          <div style=" float: right;">
-            <p>Follow AAUP</p>
+    <div class="panel-footer" style="background-color:#425262; border: none;">
+      <div class="row" style="margin-left: 15%; margin-top: 10px; margin-right: 15%; font-weight: bold; font-size:medium;">
+        <div class="col-xs-7">
+          <img src="assets/Images/aaup_nav.png" style="width:195.5px; height: 68px; float: left;" />
+          <p style="float:left; position: relative; margin-left: 10px; color: #92a2bd;">
+            C/O Wendy Harrison<br> Colorado School of Mines <br> AAUP Chapter <br> 1500 Illinois Street <br> Golden, CO 80401 <br> Phone: 202-737-5900 <br><br> <span style="color: red; ">aaupcsm@gmail.com</span>
+          </p>
+        </div>
+        <div class="col-xs-5" style=" background-color: clear; margin-top: 0px;">
+          <a class="buttonFooter buttonFooter1 buttonFooterHover" href="https://www.aaup.org/">Visit AAUP</a>
+          <a class="buttonFooter buttonFooter2 buttonFooterHover" href="https://aaupcolorado.org/">Visit AAUP of Colorado</a>
+          <div style="color: #6b7b8b; margin-right: 10px; width: 300px; float: right;">
             <div style=" float: right;">
-              <img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;">
-              <img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;">
+              <p>Follow AAUP</p>
+              <div style=" float: right;">
+                <img src="assets/Images/facebook-icon.png" style="width: 50px; height: 50px;">
+                <img src="assets/Images/twitter-icon.png" style="width: 50px; height: 50px;">
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 </body>
 <script type="text/javascript" src="assets/basic.js"></script>
 </html>
