--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li class="dropdown"><a class="btn-lg btn-link dropdown-toggle " data-toggle="dropdown" href="#" style="background-color: #425262; margin-right: 50px;"><b>Information</b></a>
             <ul class="dropdown-menu" style="margin-left: 15px;">
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Constitution<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">Constitution</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -59,7 +59,7 @@
                 </ul>
               </li>
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Bylaws<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">Bylaws</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -70,7 +70,7 @@
                 </ul>
               </li>
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Documents<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">Documents</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -82,7 +82,7 @@
                 </ul>
               </li>
               <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">AAUP Affiliates<span class="caret"></span></a>
+                <a class="test" tabindex="-1" href="#">AAUP Affiliates</a>
                 <ul class="dropdown-menu">
                   <div class="dropdown-divider"></div>
                   <a style="padding-left: 50px;"><b>External Links</b></a>
@@ -161,24 +161,25 @@
         <div class="row" style=" margin-top:25px; margin-left:25px; margin-right:25px; margin-bottom:25px; border-bottom: 5px solid; border-color: #D3D3D3;">
           <div class="col-md-4">
             <h1>What is the AAUP?</h1>
-            <p style="text-indent: 50px;">The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional
+            <p>The American Association of University Professors (AAUP) is a nonprofit membership association of faculty and other academic professionals. Its mission is to advance academic freedom and shared governance; to define fundamental professional
               values and standards for higher education; to promote the economic security of faculty, academic professionals, graduate students, post‐doctoral fellows, and all those engaged in teaching and research in higher education; to help the higher
               education community organize to make our goals a reality; and to ensure higher education's contribution to the common good.</p>
             <p>Read more about AAUP <a href="https://www.aaup.org/about-aaup"><u>Here</u></a> </p>
           </div>
           <div class="col-md-4">
             <h1>CSM Chapter of AAUP</h1>
-            <p style="text-indent: 50px;">CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference
+            <p>CSM has a recognized Chapter of AAUP – one of more than 500 local groups that serve accredited colleges and universities. We promote basic academic freedom, quality education, and other core AAUP principles and belong to the Colorado Conference
               (https://aaupcolorado.org/). We encourage you to learn more about AAUP and become a member. Regardless of formal membership, however, you are welcome to participate in our Chapter activities. We serve the needs of all faculty and academic
               professionals, post‐doctoral fellows, and graduate students engaged in teaching and research and you can reach us by direct contact with any of the Chapter officers, or privately through our “Need Help” service.</p>
           </div>
           <div class="col-md-4">
             <h1>Contact Us!</h1>
-            <p style="text-indent: 50px;"> We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research. You can reach us by direct contact with any of the Chapter officers, or privately by clicking the
+            <p> We serve the needs of all faculty and academic professionals, post‐doctoral fellows, and graduate students engaged in teaching and research. You can reach us by direct contact with any of the Chapter officers, or privately by clicking the
               "Need Help?" button below.</p>
             <a class="btn btn-primary" style="color: white;" onclick="document.getElementById('id01').style.display='block'">Need Help! <span class="glyphicon glyphicon-chevron-right"></span></a>
             <br>
-            <p style="text-indent: 50px;"> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school. Click <a href="http://facultysenate.mines.edu/"><u>Here</u></a>              for more information!</p>
+            <p> You are also welcome to join the meetings for Faculty Senate. The Faculty Senate promotes cooperation and understanding among the various constituencies that comprise the school.</p>
+			<p>Click <a href="http://facultysenate.mines.edu/"><u>Here (Faculty Senate Page)</u></a>              for more information!</p>
             <div id="id01" class="modal">
               <form class="modal-content animate">
                 <div class="container containerBorder">
